[project]
name = "harmony"
version = "0.1.0"
description = "an instant messaging and voice chat application"
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "fastapi>=0.134.0",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "uvicorn>=0.41.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.24",
]
